--- a/tags.css
+++ b/tags.css
@@ -1,5 +1,8 @@
 .tags {
-    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;   
     margin-bottom: 10px;
     font-size: 12px;
     font-family: Arial, sans-serif;
@@ -66,6 +69,10 @@
   
 /* Tag container */
 .tagContainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
     text-align: center;
     display: inline-block;
     border-radius: 5%;
